src/test/resources/regression/verification/overflow/invalid/Overflow2.scala
import leon.lang._

object Overflow2 {

  def foo2(x: Int): Int = {
    x + (-1)
  }

}
